--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/simpleSearchForm.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/simpleSearchForm.htm
@@ -34,8 +34,6 @@
 </table>
 </form>
  <!-- START Lucene-->  
-    <div id="#Result" /> 
+    <div id="#Result" style="border-width: thin; border-color: #666699; background-color: #99CCFF; " /> 
   <!-- END Lucene-->
 </div>
-
-
