--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
@@ -99,7 +99,7 @@
 									<a href="default.asp?PreKatNr=101">:: </a>
 										<a href="default.asp?PreKatNr=15">Basic 
 									Grips</a><br />
-¡¡</div>
+</div>
 								</div>
 								</font></font>
 									</b>
