--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="http://www.pros-pro.com/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="skins/skin_arfaian_2009/pages/style.css" type="text/css" />
     <link rel="search" type="application/opensearchdescription+xml" title="Suche in Pro's Pro Shop " href="/opensearch" />
-
+ 
     <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -94,19 +94,10 @@
             <tr>
                 <td colspan="3" _background="../images/bg/bg_line_main_menu.gif">
                     <table border="0" width="100%" id="table3" cellspacing="0" cellpadding="0" summary="design">
-                        <tr>
-                            <td width="24">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
-                            </td>
-                            <td width="846">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" /><img border="0"
-                                    src="../images/spacer.gif" width="1" height="1" alt="" />
-                            </td>
-                            <td valign="bottom">
-                                <p align="right">
-                                    <a href="default.asp?pageToShow=warenkorbStep1">
-                                        <img border="0" src="../images/buttons/basket_top.gif" width="129" height="18" alt="" /></a>
-                                </p>
+                        <tr> <td valign="bottom" align="right">
+                                 <a href="default.aspx?pageToShow=warenkorbStep1">
+                                        <img style="clip: rect(auto, 0px, auto, auto)" border="0" src="../images/buttons/basket_top.gif" width="129" height="18" alt="" /></a>
+                               
                             </td>
                         </tr>
                     </table>
@@ -167,8 +158,8 @@
                                                     <td width="13">
                                                         <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                                                     </td>
-                                                    <td>
-                                                        [SIMPLE_SEARCH_FORM]
+                                                    <td> <div style="float: left; overflow: visible; position: absolute; top: 212px;">
+                                                         [SIMPLE_SEARCH_FORM]</div>
                                                     </td>
                                                 </tr>
                                             </table>
