--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_lifestyle.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_lifestyle.htm
@@ -273,14 +273,14 @@
 										666</font></td>
 									</tr>
 								</table>
-															<p align="right">¡¡</p>
-															<p align="right">¡¡</p>
+															<p align="right"></p>
+															<p align="right"></p>
 															<p>
 															</td>
 														</tr>
 														<tr>
 															<td height="143" width="440">
-															¡¡</td>
+															</td>
 														</tr>
 														</table>
 											</div>
