--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/account/myAccount.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/account/myAccount.htm
@@ -39,7 +39,7 @@
                                         <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
                                             bordercolor="#111111" width="100%" id="AutoNumber76" height="100">
                                             <tr>
-                                                <td height="1" class="style1">
+                                                <td height="1"  >
                                                     &nbsp;&nbsp;
                                                 </td>
                                             </tr>
@@ -55,7 +55,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" class="style1">
+                                                    <td height="13"  >
                                                         &nbsp;&nbsp;&nbsp;Ihre UID Nummer lautet: <b>[USER_UID]</b>
                                                     </td>
                                                 </tr>
@@ -65,7 +65,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" class="style1" align="middle">
+                                                    <td height="13"   align="middle">
                                                         <table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
                                                             bordercolor="#c0c0c0" width="80%" id="AutoNumber77">
                                                             <tr>
@@ -127,11 +127,11 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" class="style1">
+                                                    <td height="13"  >
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" class="style1" align="middle">
+                                                    <td height="13"   align="middle">
                                                         <table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
                                                             bordercolor="#c0c0c0" width="80%" id="AutoNumber77" height="75">
                                                             <tr>
@@ -242,11 +242,11 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" class="style1">
+                                                    <td height="13"  >
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" valign="top" class="style1">
+                                                    <td height="13" valign="top"  >
                                                         <div align="center">
                                                             <center>
                                                                 <table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
@@ -332,7 +332,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td height="13" valign="top" class="style1">
+                                                    <td height="13" valign="top"  >
                                                         <div align="center">
                                                             <center>
                                                                 <!--
